Update gradle build settings